# liblogging

./: .gitignore  meson.build  meson_options.txt  readme.md
build-config/: meson.build
build-config/quill/: meson.build
cross/: wasm.ini
examples/: meson.build  simple.cpp
src/logging/: meson.build
src/logging/include/fourdst/logging/: logging.h
src/logging/lib/: logging.cpp
src/probe/: meson.build
src/probe/private/: logger.cpp  probe.cpp
src/probe/public/: logger.h  probe.h
subprojects/: quill.wrap
subprojects/packagefiles/quill/: add_wasm_rdtsc_fallback_support.patch  enable_pthread_header_emscripted.patch
tests/: meson.build
tests/logging/: loggingTest.cpp  meson.build
